# ChangeLog for media-libs/libextractor
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.76 2012/10/02 12:03:29 ssuominen Exp $

*libextractor-1.0.0 (02 Oct 2012)

  02 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
  +libextractor-1.0.0.ebuild, metadata.xml:
  Version bump wrt #436932. Thanks to Mike Frysinger for reporting.

  15 Sep 2012; Tim Harder <radhermit@gentoo.org> libextractor-0.6.3-r1.ebuild:
  Remove blocker on csound (bug #247394).

  14 Aug 2012; Samuli Suominen <ssuominen@gentoo.org>
  libextractor-0.6.3-r1.ebuild:
  Fix building with recent app-text/poppler wrt #431268 by Mattia Rossi and
  Rick Harris

  05 Aug 2012; Samuli Suominen <ssuominen@gentoo.org>
  -libextractor-0.6.3.ebuild:
  old

  04 Aug 2012; Agostino Sarubbo <ago@gentoo.org> libextractor-0.6.3-r1.ebuild:
  Stable for amd64, wrt bug #429530

  03 Aug 2012; Jeff Horelick <jdhore@gentoo.org> libextractor-0.6.3-r1.ebuild:
  marked x86 per bug 429530

  02 Aug 2012; Samuli Suominen <ssuominen@gentoo.org>
  libextractor-0.6.3-r1.ebuild:
  Block all of app-crypt/pkcrack, media-sound/csound, sci-biology/glimmer and
  sci-chemistry/pdb-extract for installing binary called 'extract' wrt #247394

*libextractor-0.6.3-r1 (01 Jun 2012)

  01 Jun 2012; Samuli Suominen <ssuominen@gentoo.org>
  +libextractor-0.6.3-r1.ebuild:
  USE flags "gtk" and "pdf" for optionalizing app-text/poppler and
  x11-libs/gtk+:2 wrt #415447 by Thomas Beutin

  11 May 2012; Samuli Suominen <ssuominen@gentoo.org>
  -libextractor-0.5.19a.ebuild:
  old

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libextractor-0.6.3.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  30 Apr 2012; Agostino Sarubbo <ago@gentoo.org> libextractor-0.6.3.ebuild:
  Stable for amd64, wrt bug #413827

  29 Apr 2012; Jeff Horelick <jdhore@gentoo.org> libextractor-0.6.3.ebuild:
  marked x86 per bug 413827
