@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libsmf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libsmf/ChangeLog,v 1.4 2012/05/05 08:02:43 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libsmf/ChangeLog,v 1.5 2012/10/12 22:51:01 blueness Exp $
+
+  12 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libsmf-1.3.ebuild:
+  keyword ~ppc, bug #436954
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> libsmf-1.3.ebuild:
   dev-util/pkgconfig -> virtual/pkgconfig
@@ -16,4 +19,3 @@
   01 Oct 2011; Tim Harder <radhermit@gentoo.org> +libsmf-1.3.ebuild,
   +metadata.xml:
   Initial import.
-
