@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libextractor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.76 2012/10/02 12:03:29 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libextractor/ChangeLog,v 1.77 2012/10/12 22:51:49 blueness Exp $
+
+  12 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  libextractor-1.0.0.ebuild:
+  keyword ~ppc, bug #436954
 
 *libextractor-1.0.0 (02 Oct 2012)
 
